fixed text size/spacing in comparison chart

--- a/public/styles/views/_banner.scss
+++ b/public/styles/views/_banner.scss
@@ -3,7 +3,7 @@
    @include flexSetUp(space-between, center);
    background-color: black;
    color: white;
-   z-index: 10;
+   z-index: 15;
    position: fixed;
    right: 0;
    left: 0;
