--- a/public/styles/views/_cameras.scss
+++ b/public/styles/views/_cameras.scss
@@ -58,6 +58,7 @@
         flex-direction: column; /*need?*/
         margin: auto;
         position: relative;
+        padding-bottom: 4%;
     }
 
     .hero5-header-size {
@@ -145,7 +146,7 @@
       @include button-text()
       @include flexSetUp(center, center);
       color: $fake-black;
-      margin-top: 24px;
+      margin-top: -24px;
       text-transform: uppercase;
     }
     //===============================================================================//
@@ -161,10 +162,13 @@
       padding-bottom: 4%;
     }
 
+
+
     .left-half {
       width: 41%;
       position: absolute;
       background-color: #FFFFFF;
+      padding-bottom: 4%;
     }
 
     .hero5-session-image {
@@ -177,6 +181,7 @@
       position: absolute;
       right: 8vw;
       background-color: #FFFFFF;
+      padding-bottom: 4%;
     }
 
     .session-image {
@@ -335,7 +340,7 @@
     .img-session {
         z-index: 1;
         width: 85%;
-        height: 290px;
+        height: 300px;
         background-image: url("https://shop.gopro.com/on/demandware.static/-/Sites-gopro-products/default/dwcb018876/hero5launch/HERO_Session_315.png");
         background-size: contain;
         background-repeat: no-repeat;
@@ -375,7 +380,8 @@
         margin: 8px auto auto;
         text-align: center;
         line-height: 1.5em;
-        font-family: Roboto;
+        font-size: 13px;
+        font-family: $title;
         position: relative;
         top: 100px;
         color: #666666;
@@ -394,7 +400,8 @@
         margin: 8px auto auto;
         text-align: center;
         line-height: 1.5em;
-        font-family: Roboto;
+        font-size: 13px;
+        font-family: $title;
         position: relative;
         top: 28px;
         color: #666666;
@@ -406,7 +413,8 @@
         margin: 8px auto auto;
         text-align: center;
         line-height: 1.5em;
-        font-family: Roboto;
+        font-size: 13px;
+        font-family: $title;
         position: relative;
         top: 28px;
         color: #FFFFFF;
